--- a/src/main/webapp/errorPage/errorPage.html
+++ b/src/main/webapp/errorPage/errorPage.html
@@ -5,7 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p>The requested page was not found</p>
-<div>${error}</div>
+<h2 style="color:red;">The requested page does not exist</h2>
+<h2 style="color:red;">Please, Enter a valid URL</h2>
+
+<h3 style="color:green;"> Valid Url is /WatchWorld/Home  </h3>
+<h4> Enter that to navigate back</h4>
 </body>
 </html>
